test/haskell2010/conformance/negative/MissingInstanceClass.hs
module MissingInstanceClass (MeasureMissing(..)) where

class MeasureMissing a where
  measureMissing :: a -> Int
